# mr-wolf

./: Cargo.toml  README.md  build.rs  flake.nix  run.sh  rust-toolchain.toml
app/: client.rs  server.rs
proto/: mrwolf.proto
src/: store.rs  types.rs
