[package]
name = "mr-wolf"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "mr-wolf-server"
path = "app/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "mr-wolf-client"
path = "app/client.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.26"
uuid = { version = "1.4.1", features = ["v4"] }
cryptoxide = "0.4.4"

[build-dependencies]
tonic-build = "0.9"
